--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VITE_FIREBASE_STORAGE_BUCKET=shopwise-49df6.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=998429884896
 VITE_FIREBASE_APP_ID=1:998429884896:web:8bc504280161cf24f1ab85
 
+PORT=5180
 
  # For Stripe integration (when you implement it)
 # REACT_APP_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
